--- a/index.html
+++ b/index.html
@@ -24,62 +24,74 @@
     </header>
     <main class="main">
         <section class="slider">
-            <div class="opacity"></div>
-            <div class="slider_comment">
-                <h2 class="slider_head">AFFORDABLE PARIS TOURS </h2>
-                <p class="slider_text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
-            </div>            
+            <div class="opacity">
+            </div>
+            <div class="slider_content">
+               <div class="left_arrow"></div>
+                <div class="slider_comment">
+                    <h2 class="slider_head">AFFORDABLE PARIS TOURS </h2>
+                    <p class="slider_text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                </div>
+                <div class="right_arrow"></div> 
+            </div>         
         </section>
         <section class="container new_collection">
             <h2 class="collection_header">New collection</h2>
             <article class="collection__item"><img src="./img/category-2.png" alt="img" >
                 <div class="price"><p>Blue tshirt<span>$26</span></p></div>
-                <div class="udisp_icons">
+                <div class="udisp_icons"></div>
+                <div class="icons">               
                     <div class="icon_wrapper">
                         <div class="icon"><img src="./img/heart_icon.png" alt="icon" width="25px" height="25px"></div>
                         <div class="icon"><img src="./img/arrows_icon.png" alt="icon" width="25px" height="25px"></div>
                         <div class="icon"><img src="./img/clock_icon.png" alt="icon" width="25px" height="25px"></div>
-                    </div>
+                    </div>     
                     <div class="long_icon_wrapper">
                         <div class="long_icon"><img src="./img/cart_icon.png" alt="icon" width="25px" height="25px"><p class="long_icon_comment">add to cart</p></div>
-                        </div>
+                    </div>
                 </div>
             </article>
             <article class="collection__item"><img class="collection__item_img" src="./img/category-1.png" alt="img" >
                 <div class="price"><p>Woman shirt<span>$31</span></p></div>
-                <div class="udisp_icons">
+                <div class="udisp_icons"></div>
+                <div class="icons">               
                     <div class="icon_wrapper">
                         <div class="icon"><img src="./img/heart_icon.png" alt="icon" width="25px" height="25px"></div>
                         <div class="icon"><img src="./img/arrows_icon.png" alt="icon" width="25px" height="25px"></div>
                         <div class="icon"><img src="./img/clock_icon.png" alt="icon" width="25px" height="25px"></div>
-                    </div>
+                    </div>     
                     <div class="long_icon_wrapper">
                         <div class="long_icon"><img src="./img/cart_icon.png" alt="icon" width="25px" height="25px"><p class="long_icon_comment">add to cart</p></div>
-                        </div>
+                    </div>
+                </div>
             </article>
             <article class="collection__item"><img class="collection__item_img" src="./img/category-4.png" alt="img" >
                 <div class="price"><p>Yellow tshirt<span>$21</span></p></div>
-                <div class="udisp_icons">
+                <div class="udisp_icons"></div>
+                <div class="icons">               
                     <div class="icon_wrapper">
                         <div class="icon"><img src="./img/heart_icon.png" alt="icon" width="25px" height="25px"></div>
                         <div class="icon"><img src="./img/arrows_icon.png" alt="icon" width="25px" height="25px"></div>
                         <div class="icon"><img src="./img/clock_icon.png" alt="icon" width="25px" height="25px"></div>
-                    </div>
+                    </div>     
                     <div class="long_icon_wrapper">
                         <div class="long_icon"><img src="./img/cart_icon.png" alt="icon" width="25px" height="25px"><p class="long_icon_comment">add to cart</p></div>
-                        </div>
+                    </div>
+                </div>
             </article>
             <article class="collection__item"><img class="collection__item_img" src="./img/category-3.png" alt="img" >
                 <div class="price"><p>Cool lingerie<span>$56</span></p></div>
-                <div class="udisp_icons">
+                <div class="udisp_icons"></div>
+                <div class="icons">               
                     <div class="icon_wrapper">
                         <div class="icon"><img src="./img/heart_icon.png" alt="icon" width="25px" height="25px"></div>
                         <div class="icon"><img src="./img/arrows_icon.png" alt="icon" width="25px" height="25px"></div>
                         <div class="icon"><img src="./img/clock_icon.png" alt="icon" width="25px" height="25px"></div>
-                    </div>
+                    </div>     
                     <div class="long_icon_wrapper">
                         <div class="long_icon"><img src="./img/cart_icon.png" alt="icon" width="25px" height="25px"><p class="long_icon_comment">add to cart</p></div>
-                        </div>
+                    </div>
+                </div>
             </article>
         </section>
     </main>
