--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="container header">
-        <nav class="nav clearfix">
+        <nav class="nav">
             <a class="logo" href="#"><H1 class="logo_h">Mart</H1></a> 
             <ul class="nav_list">
                 <li class="nav_item"><a href="#">Home</a></li>
