add after, fix comments

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="container header">
         <nav class="nav">
-            <a class="logo" href="#"><H1 class="logo_h">Mart</H1></a> 
+            <a class="logo" href="#"><h1 class="logo_h">Mart</h1></a> 
             <ul class="nav_list">
                 <li class="nav_item"><a href="#">Home</a></li>
                 <li class="nav_item"><a href="#">About us</a></li>
@@ -24,12 +24,12 @@
     </header>
     <main class="main">
         <section class="slider">
-            <div class="opacity">
-            </div>
+            <!-- <div class="opacity">
+            </div> -->
             <div class="slider_content">
                <div class="left_arrow"></div>
                 <div class="slider_comment">
-                    <h2 class="slider_head">AFFORDABLE PARIS TOURS </h2>
+                    <h2 class="slider_head">AFFORDABLE PARIS TOURS</h2>
                     <p class="slider_text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
                 </div>
                 <div class="right_arrow"></div> 
@@ -37,9 +37,8 @@
         </section>
         <section class="container new_collection">
             <h2 class="collection_header">New collection</h2>
-            <article class="collection__item"><img src="./img/category-2.png" alt="img" >
+            <article class="collection__item"><img class="collection__item_img" src="./img/category-2.png" alt="img" >
                 <div class="price"><p>Blue tshirt<span>$26</span></p></div>
-                <div class="udisp_icons"></div>
                 <div class="icons">               
                     <div class="icon_wrapper">
                         <div class="icon"><img src="./img/heart_icon.png" alt="icon" width="25px" height="25px"></div>
@@ -53,7 +52,6 @@
             </article>
             <article class="collection__item"><img class="collection__item_img" src="./img/category-1.png" alt="img" >
                 <div class="price"><p>Woman shirt<span>$31</span></p></div>
-                <div class="udisp_icons"></div>
                 <div class="icons">               
                     <div class="icon_wrapper">
                         <div class="icon"><img src="./img/heart_icon.png" alt="icon" width="25px" height="25px"></div>
@@ -67,7 +65,6 @@
             </article>
             <article class="collection__item"><img class="collection__item_img" src="./img/category-4.png" alt="img" >
                 <div class="price"><p>Yellow tshirt<span>$21</span></p></div>
-                <div class="udisp_icons"></div>
                 <div class="icons">               
                     <div class="icon_wrapper">
                         <div class="icon"><img src="./img/heart_icon.png" alt="icon" width="25px" height="25px"></div>
@@ -81,7 +78,6 @@
             </article>
             <article class="collection__item"><img class="collection__item_img" src="./img/category-3.png" alt="img" >
                 <div class="price"><p>Cool lingerie<span>$56</span></p></div>
-                <div class="udisp_icons"></div>
                 <div class="icons">               
                     <div class="icon_wrapper">
                         <div class="icon"><img src="./img/heart_icon.png" alt="icon" width="25px" height="25px"></div>
